# news-crawler

./: .gitignore  INSTALL.md  README.md  pyproject.toml  settings-sample.json
app/: category_repo.py  crud.py  database.py  main.py  models.py  payload.py  scraper.py  site_repo.py  utils.py
app/resource/databases/: 20240517__init.sql  20240619__add_column_to_article.sql  20240817__create_youtube_shorts.sql  init.sql
