[tool.poetry]
name = "news-crawler"
version = "0.1.0"
description = "this is news-crawler"
authors = ["ydj515 <ydj515@hanmail.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pytest = "^8.2.0"
uvicorn = "^0.29.0"
bs4 = "^0.0.2"
requests = "^2.32.2"
tqdm = "^4.66.4"
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"
pylint = "^3.2.0"
sqlalchemy = "^2.0.30"
databases = "^0.9.0"
aiomysql = "^0.2.0"
pymysql = "^1.1.1"
mysql = "^0.0.3"
mysql-connector-python = "^8.4.0"
alembic = "^1.13.1"
sqlmodel = "^0.0.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
